--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.8",
     "emailjs": "^4.0.3",
     "framer-motion": "^12.16.0",
+    "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
