--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emailjs": "^4.0.3",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.514.0",
+    "markdown-to-jsx": "^7.7.12",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
